feb24/ingress_learn1/webapp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app1dep
  namespace: ts
spec:
  strategy:
    type: RollingUpdate 
  replicas: 3
  selector:
    matchLabels: 
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec: 
      containers:
        - name: app1c
          image: heartocean/docom:kj11
          ports:
            - containerPort: 8080
