feb24/ingress_learn1/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1ingress
  namespace: ts
spec:
  ingressClassName: nginx
  rules:
    - host: "af47e5bc009d541658a7f6debb1efd87-1509577740.ap-south-1.elb.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend: 
              service: 
                name: app1serv
                port:
                  number: 80
          - path: '/maven-web-app'
            pathType: Prefix
            backend:
              service:
                name: app1serv
                port:
                  number: 80
